[package]
name = "protohackers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "problem-0"

[dependencies]
primes = "0.3.0"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
uuid = { version = "1.2.1", features = [ "v4", "fast-rng", "macro-diagnostics" ] }
byteorder = "1.4.3"
anyhow = "1.0.66"
bit_reverse = "0.1.8"